<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Ajouter une image pour l'appli -->
<!-- TODO ajouter 2 3 langues -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <include
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOriginal_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/langues_originales_supportees"
            android:theme="@style/spinnerTheme" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextOriginal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/edit_text_style"
        android:elevation="3dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editTextOriginal_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- espace permettant d'aligner les boutons à droite grâce à weight = 1 -->
        <Space
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="0dp"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:text="@string/buttonCancel_text"
            android:textColor="@color/deeplColor" />

        <Button
            android:id="@+id/buttonTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/deeplColor"
            android:text="@string/button_translate_text"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTranslate_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/langues_traduites_supportees"
            android:theme="@style/spinnerTheme" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTranslated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/edit_text_style"
        android:elevation="3dp"
        android:maxLines="10"
        android:minLines="2"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>

